# client-server-application

./: CMakeLists.txt  README.md
include/: client.hpp  servers.hpp
src/: client.cpp  display_server.cpp  main.cpp  processing_server.cpp
test/: tests.cpp
